feat: Added some style ans also made it more responsive

--- a/index.html
+++ b/index.html
@@ -48,11 +48,23 @@
           </p>
 
           <div class="social-media">
-            <a href="#github"><i class="bx bxl-github"></i></a>
-            <a href="#linkdin"><i class="bx bxl-linkedin"></i></a>
-            <a href="#instagram"><i class="bx bxl-instagram"></i></a>
+            <a href="https://github.com/harshit-simform" target="_blank"
+              ><i class="bx bxl-github"></i
+            ></a>
+            <a
+              href="https://www.linkedin.com/in/harshit-gupta-profile/"
+              target="_blank"
+              ><i class="bx bxl-linkedin"></i
+            ></a>
+            <a
+              href="https://instagram.com/_harshit.guptaji_?igshid=ZDdkNTZiNTM="
+              target="_blank"
+              ><i class="bx bxl-instagram"></i
+            ></a>
           </div>
-          <button>Download Cv</button>
+          <a href="/assets/pdf/Harshit_ Gupta_Resume.pdf" download>
+            <button>Download CV</button>
+          </a>
         </div>
       </div>
     </section>
@@ -284,7 +296,7 @@
                 </div>
 
                 <div class="card-content">
-                  <h2 class="name">David Dell</h2>
+                  <h2 class="name">Adam Johnson</h2>
                   <p class="description">
                     The lorem text the section that contains header with having
                     open functionality. Lorem dolor sit amet consectetur
@@ -306,7 +318,7 @@
                 </div>
 
                 <div class="card-content">
-                  <h2 class="name">David Dell</h2>
+                  <h2 class="name">Emma Wilson</h2>
                   <p class="description">
                     The lorem text the section that contains header with having
                     open functionality. Lorem dolor sit amet consectetur
@@ -328,7 +340,7 @@
                 </div>
 
                 <div class="card-content">
-                  <h2 class="name">David Dell</h2>
+                  <h2 class="name">Tyler Brown</h2>
                   <p class="description">
                     The lorem text the section that contains header with having
                     open functionality. Lorem dolor sit amet consectetur
@@ -350,7 +362,7 @@
                 </div>
 
                 <div class="card-content">
-                  <h2 class="name">David Dell</h2>
+                  <h2 class="name">Olivia Rodriguez</h2>
                   <p class="description">
                     The lorem text the section that contains header with having
                     open functionality. Lorem dolor sit amet consectetur
@@ -372,7 +384,7 @@
                 </div>
 
                 <div class="card-content">
-                  <h2 class="name">David Dell</h2>
+                  <h2 class="name">Nathan Davis</h2>
                   <p class="description">
                     The lorem text the section that contains header with having
                     open functionality. Lorem dolor sit amet consectetur
@@ -394,7 +406,7 @@
                 </div>
 
                 <div class="card-content">
-                  <h2 class="name">David Dell</h2>
+                  <h2 class="name">Sophia Nguyen</h2>
                   <p class="description">
                     The lorem text the section that contains header with having
                     open functionality. Lorem dolor sit amet consectetur
@@ -422,9 +434,19 @@
             </p>
             <p><i class="fa-solid fa-phone"></i>9157826711</p>
             <div class="social-media">
-              <a href="#github"><i class="bx bxl-github"></i></a>
-              <a href="#linkdin"><i class="bx bxl-linkedin"></i></a>
-              <a href="#instagram"><i class="bx bxl-instagram"></i></a>
+              <a href="https://github.com/harshit-simform" target="_blank"
+                ><i class="bx bxl-github"></i
+              ></a>
+              <a
+                href="https://www.linkedin.com/in/harshit-gupta-profile/"
+                target="_blank"
+                ><i class="bx bxl-linkedin"></i
+              ></a>
+              <a
+                href="https://instagram.com/_harshit.guptaji_?igshid=ZDdkNTZiNTM="
+                target="_blank"
+                ><i class="bx bxl-instagram"></i
+              ></a>
             </div>
           </div>
           <div class="contact-right">
