--- a/pages/edit.html
+++ b/pages/edit.html
@@ -7,12 +7,14 @@
     <title>Edit Product</title>
     <link rel="stylesheet" href="/assets/css/edit.css">
     <script src="/assets/js/edit.js" defer></script>
+
 </head>
 <body>
-    <form id="editForm" onsubmit="editProduct(event)">
+    <form id="editForm" >
+      <h1>Edit Form</h1>  
         <div>
-        <label for="id">ID:</label>
-        <input type="text" id="id" name="id" disabled>
+          <label for="id">ID:</label>
+          <input type="text" id="id" name="id" disabled>
         </div>
         <div class="infoFields">
           <label for="productName">Name:</label>
@@ -30,8 +32,10 @@
           <label for="productDescription">Description:</label>
           <input type="text" id="productDescription" required />
         </div>
-        <button class="editButton" type="submit">Edit</button>
-        <button class="cancelButton"><a href="/index.html">Cancel</a></button>
+        <div class="button">
+        <button class="editButton" onclick="editProduct(event)">Edit</button>
+        <button onclick="cancelEdit(event)" class="cancelButton">Cancel</button>
+      </div>
       </form>
       
 </html>
