fix: Fixed image show feature in view.html page

--- a/pages/view.html
+++ b/pages/view.html
@@ -20,8 +20,8 @@
           <input type="text" id="productName" disabled />
         </div>
         <div class="infoFields">
-          <label for="productImage">Image Url:</label>
-          <input type="text" id="productImage" disabled />
+          <label for="productImage">Image:</label>
+          <img id="productImage" alt="product-image">
         </div>
         <div class="infoFields">
           <label for="productPrice">Price:</label>
